sections no longer hide behind nav

--- a/css/fullPage.sass
+++ b/css/fullPage.sass
@@ -42,6 +42,7 @@ body
   width: 89%
   margin: 0 auto
   position: relative
+  top: 80px
   @media screen and (max-width: 600px)
     align-items: center
 
@@ -57,10 +58,11 @@ body
       font-size: 30px
       padding-top: 80px
   h2
-    font-size: 40px
+    font-size: 30px
     margin: 0 auto
     text-align: center
     color: #967800
+    margin-bottom: 0
     @media screen and (max-width: 600px)
       font-size: 16px
       margin-bottom: 0
@@ -69,14 +71,14 @@ body
     margin: 0 auto
     font-size: 24px
     text-align: center
-    padding: 10px
+    padding: 0
     @media screen and (max-width: 600px)
       font-size: 16px
       margin-bottom: 0
       padding-bottom: 0
 
   img
-    width: 600px
+    width: 400px
     margin: 0 auto
     top: 0
     left: 0
@@ -97,6 +99,7 @@ body
     color: white
     text-align: center
     font-size: 40px
+    padding-top: 30px
     @media screen and (max-width: 600px)
       font-size: 24px
       padding-top: 80px
@@ -221,7 +224,7 @@ body
   border: medium none
   font-family: $font-lyngo
   font-size: 30px
-  padding: 25px
+  padding: 20px
   border-radius: 4px
   color: #272F39
   @media screen and (max-width: 800px)
